Added POST capability to write users to database

--- a/Node/package.json
+++ b/Node/package.json
@@ -4,6 +4,7 @@
   "description": "I am practicing see",
   "main": "main.js",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "fs": "0.0.1-security",
     "sql.js": "^0.4.0"
